Add recent ligo papers

--- a/cv.bib
+++ b/cv.bib
@@ -89,54 +89,6 @@
     year = "2020"
 }
 
-@article{Abbott:2020niy,
-    author = {{LIGO Scientific and Virgo Collaborations}},
-    collaboration = "LIGO Scientific, Virgo",
-    title = "{GWTC-2: Compact Binary Coalescences Observed by LIGO and Virgo During the First Half of the Third Observing Run}",
-    eprint = "2010.14527",
-    archivePrefix = "arXiv",
-    primaryClass = "gr-qc",
-    reportNumber = "P2000061",
-    month = "10",
-    year = "2020"
-}
-
-@article{Abbott:2020jks,
-    author = {{LIGO Scientific and Virgo Collaborations}},
-    collaboration = "LIGO Scientific, Virgo",
-    title = "{Tests of General Relativity with Binary Black Holes from the second LIGO-Virgo Gravitational-Wave Transient Catalog}",
-    eprint = "2010.14529",
-    archivePrefix = "arXiv",
-    primaryClass = "gr-qc",
-    reportNumber = "LIGO-P2000091",
-    month = "10",
-    year = "2020"
-}
-
-@article{Abbott:2020gyp,
-    author = {{LIGO Scientific and Virgo Collaborations}},
-    collaboration = "LIGO Scientific, Virgo",
-    title = "{Population Properties of Compact Objects from the Second LIGO-Virgo Gravitational-Wave Transient Catalog}",
-    eprint = "2010.14533",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.HE",
-    reportNumber = "LIGO-P2000077",
-    month = "10",
-    year = "2020"
-}
-
-@article{Abbott:2020yvp,
-    author = {{LIGO Scientific and Virgo Collaborations}},
-    collaboration = "LIGO Scientific, Virgo",
-    title = "{Search for Gravitational Waves Associated with Gamma-Ray Bursts Detected by Fermi and Swift During the LIGO-Virgo Run O3a}",
-    eprint = "2010.14550",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.HE",
-    reportNumber = "LIGO-P2000040",
-    month = "10",
-    year = "2020"
-}
-
 @ARTICLE{2017ApJ...843..141F,
        author = {{Ferguson}, Deborah and {Gardner}, Susan and {Yanny}, Brian},
         title = "{Milky Way Tomography with K and M Dwarf Stars: The Vertical Structure of the Galactic Disk}",
@@ -224,51 +176,67 @@ archivePrefix = {arXiv},
     year = "2021"
 }
 
-@article{Abbott:2021jiu,
+@article{LIGOScientific:2021yby,
     author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, Virgo, KAGRA",
-    title = "{Constraints from LIGO O3 data on gravitational-wave emission due to r-modes in the glitching pulsar PSR J0537-6910}",
+    title = "{Constraints from LIGO O3 Data on Gravitational-wave Emission Due to R-modes in the Glitching Pulsar PSR J0537\textendash{}6910}",
     eprint = "2104.14417",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "LIGO-P2100069",
-    month = "4",
+    doi = "10.3847/1538-4357/ac0d52",
+    journal = "Astrophys. J.",
+    volume = "922",
+    number = "1",
+    pages = "71",
     year = "2021"
 }
 
-@article{Abbott:2021jel,
-    author = "Abbott, R. and others",
-    collaboration =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    title = "{Search for anisotropic gravitational-wave backgrounds using data from Advanced LIGO's and Advanced Virgo's first three observing runs}",
+@article{KAGRA:2021mth,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, Virgo, LIGO Scientific",
+    title = "{Search for anisotropic gravitational-wave backgrounds using data from Advanced LIGO and Advanced Virgo\textquoteright{}s first three observing runs}",
     eprint = "2103.08520",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2000500",
-    month = "3",
+    doi = "10.1103/PhysRevD.104.022005",
+    journal = "Phys. Rev. D",
+    volume = "104",
+    number = "2",
+    pages = "022005",
     year = "2021"
 }
 
-@article{Abbott:2021ksc,
-    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+@article{LIGOScientific:2021nrg,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, Virgo, KAGRA",
-    title = "{Constraints on cosmic strings using data from the third Advanced LIGO-Virgo observing run}",
+    title = "{Constraints on Cosmic Strings Using Data from the Third Advanced LIGO\textendash{}Virgo Observing Run}",
     eprint = "2101.12248",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2000506",
-    month = "1",
+    doi = "10.1103/PhysRevLett.126.241102",
+    journal = "Phys. Rev. Lett.",
+    volume = "126",
+    number = "24",
+    pages = "241102",
     year = "2021"
 }
 
-@article{Abbott:2021xxi,
-    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, Virgo, KAGRA",
-    title = "{Upper Limits on the Isotropic Gravitational-Wave Background from Advanced LIGO's and Advanced Virgo's Third Observing Run}",
+@article{KAGRA:2021kbb,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, Virgo, LIGO Scientific",
+    title = "{Upper limits on the isotropic gravitational-wave background from Advanced LIGO and Advanced Virgo\textquoteright{}s third observing run}",
     eprint = "2101.12130",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-DCC-P2000314",
-    month = "1",
+    doi = "10.1103/PhysRevD.104.022004",
+    journal = "Phys. Rev. D",
+    volume = "104",
+    number = "2",
+    pages = "022004",
     year = "2021"
 }
 
@@ -300,7 +268,7 @@ archivePrefix = {arXiv},
     year = "2021"
 }
 
-@article{Abbott:2020yvp,
+@article{LIGOScientific:2020lst,
     author = {{LIGO Scientific and Virgo Collaborations}},
     collaboration = "LIGO Scientific, Virgo",
     title = "{Search for Gravitational Waves Associated with Gamma-Ray Bursts Detected by Fermi and Swift During the LIGO-Virgo Run O3a}",
@@ -308,8 +276,12 @@ archivePrefix = {arXiv},
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "LIGO-P2000040",
-    month = "10",
-    year = "2020"
+    doi = "10.3847/1538-4357/abee15",
+    journal = "Astrophys. J.",
+    volume = "915",
+    number = "2",
+    pages = "86",
+    year = "2021"
 }
 
 @article{Abbott:2020gyp,
@@ -324,19 +296,23 @@ archivePrefix = {arXiv},
     year = "2020"
 }
 
-@article{Abbott:2020jks,
+@article{LIGOScientific:2020tif,
     author = {{LIGO Scientific and Virgo Collaborations}},
     collaboration = "LIGO Scientific, Virgo",
-    title = "{Tests of General Relativity with Binary Black Holes from the second LIGO-Virgo Gravitational-Wave Transient Catalog}",
+    title = "{Tests of general relativity with binary black holes from the second LIGO-Virgo gravitational-wave transient catalog}",
     eprint = "2010.14529",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2000091",
-    month = "10",
-    year = "2020"
+    doi = "10.1103/PhysRevD.103.122002",
+    journal = "Phys. Rev. D",
+    volume = "103",
+    number = "12",
+    pages = "122002",
+    year = "2021"
 }
 
-@article{Abbott:2020niy,
+@article{LIGOScientific:2020ibl,
     author = {{LIGO Scientific and Virgo Collaborations}},
     collaboration = "LIGO Scientific, Virgo",
     title = "{GWTC-2: Compact Binary Coalescences Observed by LIGO and Virgo During the First Half of the Third Observing Run}",
@@ -344,6 +320,280 @@ archivePrefix = {arXiv},
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "P2000061",
+    doi = "10.1103/PhysRevX.11.021053",
+    journal = "Phys. Rev. X",
+    volume = "11",
+    pages = "021053",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021mwx,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA, Virgo",
+    title = "{Searches for Continuous Gravitational Waves from Young Supernova Remnants in the Early Third Observing Run of Advanced LIGO and Virgo}",
+    eprint = "2105.11641",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    doi = "10.3847/1538-4357/ac17ea",
+    journal = "Astrophys. J.",
+    volume = "921",
+    number = "1",
+    pages = "80",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021odm,
+    author ={{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, Virgo, KAGRA",
+    title = "{Constraints on dark photon dark matter using data from LIGO's and Virgo's third observing run}",
+    eprint = "2105.13085",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "LIGO-P2100098",
+    month = "5",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021qlt,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, KAGRA, VIRGO",
+    title = "{Observation of Gravitational Waves from Two Neutron Star\textendash{}Black Hole Coalescences}",
+    eprint = "2106.15163",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO Document P2000357",
+    doi = "10.3847/2041-8213/ac082e",
+    journal = "Astrophys. J. Lett.",
+    volume = "915",
+    number = "1",
+    pages = "L5",
+    year = "2021"
+}
+
+@article{KAGRA:2021una,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, VIRGO, LIGO Scientific",
+    title = "{All-sky search for continuous gravitational waves from isolated neutron stars in the early O3 LIGO data}",
+    eprint = "2107.00600",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2000334-v7, LIGO-P2000334-v9",
+    doi = "10.1103/PhysRevD.104.082004",
+    journal = "Phys. Rev. D",
+    volume = "104",
+    number = "8",
+    pages = "082004",
+    year = "2021"
+}
+
+@article{KAGRA:2021tnv,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, VIRGO, LIGO Scientific",
+    title = "{All-sky search for short gravitational-wave bursts in the third Advanced LIGO and Advanced Virgo run}",
+    eprint = "2107.03701",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "P2100045",
+    doi = "10.1103/PhysRevD.104.122004",
+    journal = "Phys. Rev. D",
+    volume = "104",
+    number = "12",
+    pages = "122004",
+    year = "2021"
+}
+
+@article{KAGRA:2021bhs,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, VIRGO, LIGO Scientific",
+    title = "{All-sky search for long-duration gravitational-wave bursts in the third Advanced LIGO and Advanced Virgo run}",
+    eprint = "2107.13796",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "P2100063",
+    doi = "10.1103/PhysRevD.104.102001",
+    journal = "Phys. Rev. D",
+    volume = "104",
+    number = "10",
+    pages = "102001",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021usb,
+    author = {{LIGO Scientific and Virgo Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO",
+    title = "{GWTC-2.1: Deep Extended Catalog of Compact Binary Coalescences Observed by LIGO and Virgo During the First Half of the Third Observing Run}",
+    eprint = "2108.01045",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2100063",
+    month = "8",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021ozr,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Search for continuous gravitational waves from 20 accreting millisecond X-ray pulsars in O3 LIGO data}",
+    eprint = "2109.09255",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2100221",
+    month = "9",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021job,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Search for subsolar-mass binaries in the first half of Advanced LIGO and Virgo's third observing run}",
+    eprint = "2109.12197",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "LIGO-P2100163-v8",
+    month = "9",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021oez,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{All-sky, all-frequency directional search for persistent gravitational-waves from Advanced LIGO's and Advanced Virgo's first three observing runs}",
+    eprint = "2110.09834",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2100292",
     month = "10",
-    year = "2020"
+    year = "2021"
+}
+
+@article{LIGOScientific:2021aug,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Constraints on the cosmic expansion history from GWTC-3}",
+    eprint = "2111.03604",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "LIGO-P2100185-v6, LIGO-P2100185-v5",
+    month = "11",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021djp,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{GWTC-3: Compact Binary Coalescences Observed by LIGO and Virgo During the Second Part of the Third Observing Run}",
+    eprint = "2111.03606",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2000318",
+    month = "11",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021iyk,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Search for Gravitational Waves Associated with Gamma-Ray Bursts Detected by Fermi and Swift During the LIGO-Virgo Run O3b}",
+    eprint = "2111.03608",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "P2100091",
+    month = "11",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021psn,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{The population of merging compact binaries inferred using gravitational waves through GWTC-3}",
+    eprint = "2111.03634",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2100239 ; Data release: https://zenodo.org/record/5655785, LIGO-P2100239",
+    month = "11",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021hvc,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Searches for Gravitational Waves from Known Pulsars at Two Harmonics in the Second and Third LIGO-Virgo Observing Runs}",
+    eprint = "2111.13106",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2100049",
+    month = "11",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021inr,
+    author = {{LIGO Scientific and Virgo Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO",
+    title = "{Search of the Early O3 LIGO Data for Continuous Gravitational Waves from the Cassiopeia A and Vela Jr. Supernova Remnants}",
+    eprint = "2111.15116",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2100298-v7",
+    month = "11",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021jlr,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{All-sky search for gravitational wave emission from scalar boson clouds around spinning black holes in LIGO O3 data}",
+    eprint = "2111.15507",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "P2100343",
+    month = "11",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021sio,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Tests of General Relativity with GWTC-3}",
+    eprint = "2112.06861",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2100275",
+    month = "12",
+    year = "2021"
+}
+
+@article{LIGOScientific:2021quq,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Narrowband searches for continuous and long-duration transient gravitational waves from known pulsars in the LIGO-Virgo third observing run}",
+    eprint = "2112.10990",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2100267",
+    month = "12",
+    year = "2021"
+}
+
+@article{LIGOScientific:2022pjk,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{All-sky search for continuous gravitational waves from isolated neutron stars using Advanced LIGO and Advanced Virgo O3 data}",
+    eprint = "2201.00697",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2100367",
+    month = "1",
+    year = "2022"
+}
+
+@article{LIGOScientific:2022cgf,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Search for gravitational waves from Scorpius X-1 with a hidden Markov model in O3 LIGO data}",
+    eprint = "2201.10104",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2100405",
+    month = "1",
+    year = "2022"
 }
