--- a/cv.tex
+++ b/cv.tex
@@ -79,43 +79,7 @@
 
 \vspace{8px}
 
-  \textbf{Short Author Publications:}
-  \begin{enumerate}  
-	\item \fullcite{Ferguson:2020xnm}
-    \item \fullcite{Evans:2020lbq}
-    \item \fullcite{Ferguson:2019slp}
-    \item \fullcite{Heal:2017abq}
-    \item \fullcite{2017ApJ...843..141F}
-    \setcounter{papers}{\value{enumi}}
-  \end{enumerate}
-  
-  \textbf{Collaboration Publications:}
-  \begin{enumerate}
-  \setcounter{enumi}{\value{papers}}
-  \item \fullcite{Abbott:2021iab}
-  \item \fullcite{Abbott:2021jiu}
-  \item \fullcite{Abbott:2021jel}
-  \item \fullcite{Abbott:2021ksc}
-  \item \fullcite{Abbott:2021xxi}
-  \item \fullcite{Abbott:2020ilb}
-  \item \fullcite{Abbott:2020mev}
-  \item \fullcite{Abbott:2020yvp}
-  \item \fullcite{Abbott:2020gyp}
-  \item \fullcite{Abbott:2020jks}
-  \item \fullcite{Abbott:2020niy}  
-  \item \fullcite{Abbott:2020yvp}
-  \item \fullcite{Abbott:2020gyp}
-  \item \fullcite{Abbott:2020jks}
-  \item \fullcite{Abbott:2020niy}
-  \item \fullcite{Abbott:2020mjq}
-  \item \fullcite{Abbott:2020tfl}
-  \item \fullcite{Abbott:2020khf}
-  \item \fullcite{LIGOScientific:2020stg}
-  \item \fullcite{Abbott:2019ebz}
-  \item \fullcite{Salemi:2019ovz}
-  \end{enumerate}
-
-  \textbf{Invited Talks:}
+\textbf{Invited Talks:}
   \begin{enumerate}
   \item "Gravitational Wave Data Analysis", North American Einstein Toolkit Workshop, July 29, 2021
   \item “Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors”, Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
@@ -135,6 +99,59 @@
   \item D. Ferguson, et al., (2017 Oct), oral, ``Apparent Horizon Dynamics of Binary Black Hole Systems'', Georgia Regional Astronomers Meeting, Athens GA
   \item C. Powell, D. Ferguson, (2014 Apr), poster and oral, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena''. National Conference on Undergraduate Research, Lexington KY  
   \end{enumerate} 
+
+  \textbf{Short Author Publications:}
+  \begin{enumerate}  
+	\item \fullcite{Ferguson:2020xnm}
+    \item \fullcite{Evans:2020lbq}
+    \item \fullcite{Ferguson:2019slp}
+    \item \fullcite{Heal:2017abq}
+    \item \fullcite{2017ApJ...843..141F}
+    \setcounter{papers}{\value{enumi}}
+  \end{enumerate}
+  
+  \textbf{Collaboration Publications:}
+  \begin{enumerate}
+  \setcounter{enumi}{\value{papers}}
+  \item \fullcite{LIGOScientific:2022cgf}
+  \item \fullcite{LIGOScientific:2022pjk}
+  \item \fullcite{LIGOScientific:2021quq}
+  \item \fullcite{LIGOScientific:2021sio}
+  \item \fullcite{LIGOScientific:2021jlr}
+  \item \fullcite{LIGOScientific:2021inr}
+  \item \fullcite{LIGOScientific:2021hvc}
+  \item \fullcite{LIGOScientific:2021psn}
+  \item \fullcite{LIGOScientific:2021iyk}
+  \item \fullcite{LIGOScientific:2021djp}
+  \item \fullcite{LIGOScientific:2021aug}
+  \item \fullcite{LIGOScientific:2021oez}
+  \item \fullcite{LIGOScientific:2021job}
+  \item \fullcite{LIGOScientific:2021ozr}
+  \item \fullcite{LIGOScientific:2021usb}
+  \item \fullcite{KAGRA:2021bhs}
+  \item \fullcite{KAGRA:2021tnv}
+  \item \fullcite{KAGRA:2021una}
+  \item \fullcite{LIGOScientific:2021qlt}
+  \item \fullcite{LIGOScientific:2021odm}
+  \item \fullcite{LIGOScientific:2021mwx}
+  \item \fullcite{Abbott:2021iab}
+  \item \fullcite{LIGOScientific:2021yby}
+  \item \fullcite{KAGRA:2021mth}
+  \item \fullcite{LIGOScientific:2021nrg}
+  \item \fullcite{KAGRA:2021kbb}
+  \item \fullcite{Abbott:2020ilb}
+  \item \fullcite{Abbott:2020mev}
+  \item \fullcite{LIGOScientific:2020lst}
+  \item \fullcite{Abbott:2020gyp}
+  \item \fullcite{LIGOScientific:2020tif}
+  \item \fullcite{LIGOScientific:2020ibl}  
+  \item \fullcite{Abbott:2020mjq}
+  \item \fullcite{Abbott:2020tfl}
+  \item \fullcite{Abbott:2020khf}
+  \item \fullcite{LIGOScientific:2020stg}
+  \item \fullcite{Abbott:2019ebz}
+  \item \fullcite{Salemi:2019ovz}
+  \end{enumerate}
   
   \textbf{Teaching:}\\
   Spring 2018 - Head TA for Introductory Physics I\\
