Update collaboration papers

--- a/cv.bib
+++ b/cv.bib
@@ -105,11 +105,12 @@ archivePrefix = {arXiv},
        eprint = {1706.01900},
  primaryClass = {astro-ph.GA},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...843..141F},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+    options = {maxnames=999}
 }
 
 @article{Heal:2017abq,
-    author = "Healy, J. and others",
+    author = " Healy, James and Lange, Jacob and O'Shaughnessy, Richard and Lousto, Carlos and Campanelli, Manuela and Williamson, Andrew and Zlochower, Yosef and Calderon Bustillo, Juan and Clark, James, and Evans, Christopher and Ferguson, Deborah and Ghonge, Sudarshan and Jani, Karan and Khamesra, Bhavesh and Laguna, Pablo and Shoemaker, Deirdre and Garcia, Alyssa and Boyle, Michael and Hemberger, Daniel and Kidder, Lawrence and Kumar, Prayush and Lovelace, Geoffrey and Pfeiffer, Harald and Scheel, Mark and Teukolsky, Saul",
     title = "{Targeted numerical simulations of binary black holes for GW170104}",
     eprint = "1712.05836",
     archivePrefix = "arXiv",
@@ -119,11 +120,12 @@ archivePrefix = {arXiv},
     volume = "97",
     number = "6",
     pages = "064027",
-    year = "2018"
+    year = "2018",
+    options = {maxnames=999}
 }
 
 @article{Ferguson:2019slp,
-    author = "Ferguson, Deborah and Ghonge, Sudarshan and Clark, James A. and Calderon Bustillo, Juan and Laguna, Pablo and Shoemaker, Deirdre and Calderon Bustillo, Juan",
+    author = {{Ferguson}, Deborah and {Ghonge}, Sudarshan and {Clark}, James A. and {Calderon Bustillo}, Juan and {Laguna}, Pablo and {Shoemaker}, Deirdre},
     title = "{Measuring Spin of the Remnant Black Hole from Maximum Amplitude}",
     eprint = "1905.03756",
     archivePrefix = "arXiv",
@@ -133,7 +135,8 @@ archivePrefix = {arXiv},
     volume = "123",
     number = "15",
     pages = "151101",
-    year = "2019"
+    year = "2019",
+    options = {maxnames=999}
 }
 
 @article{Evans:2020lbq,
@@ -147,7 +150,8 @@ archivePrefix = {arXiv},
     volume = "37",
     number = "15",
     pages = "15LT02",
-    year = "2020"
+    year = "2020",
+    options = {maxnames=999}
 }
 
 @article{Ferguson:2020xnm,
@@ -161,7 +165,8 @@ archivePrefix = {arXiv},
     volume = "104",
     number = "4",
     pages = "044037",
-    year = "2021"
+    year = "2021",
+    options = {maxnames=999}
 }
 
 @article{Abbott:2021iab,
@@ -438,6 +443,7 @@ archivePrefix = {arXiv},
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "LIGO-P2100221",
+    doi = "10.1103/PhysRevD.105.022002",
     month = "9",
     year = "2021"
 }
@@ -546,6 +552,7 @@ archivePrefix = {arXiv},
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "P2100343",
+    doi = "10.1103/PhysRevD.105.102001",
     month = "11",
     year = "2021"
 }
@@ -595,5 +602,40 @@ archivePrefix = {arXiv},
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2100405",
     month = "1",
+    year = "2022"
+}
+
+@article{LIGOScientific:2022lsr,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Search for continuous gravitational wave emission from the Milky Way center in O3 LIGO--Virgo data}",
+    eprint = "2204.04523",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    month = "4",
+    year = "2022"
+}
+
+@article{LIGOScientific:2022jpr,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA, CHIME/FRB",
+    title = "{Search for Gravitational Waves Associated with Fast Radio Bursts Detected by CHIME/FRB During the LIGO--Virgo Observing Run O3a}",
+    eprint = "2203.12038",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "P2100124",
+    month = "3",
+    year = "2022"
+}
+
+@article{LIGOScientific:2022myk,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{First joint observation by the underground gravitational-wave detector, KAGRA, with GEO600}",
+    eprint = "2203.01270",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2100286",
+    month = "3",
     year = "2022"
 }
