--- a/cv.tex
+++ b/cv.tex
@@ -63,6 +63,7 @@
   \vspace{8px}
 	
   \textbf{Honors and Awards:}\\
+  2021 - Third Place in Visualizing Science Competition (University of Texas at Austin)\\
   2020 - Larry S. O'Hara Graduate Student Fellowship (Georgia Institute of Technology)\\
   2020 - Amelio Award for Research Excellence (Georgia Institute of Technology)\\
   2019 - Lindau Nobel Laureate Meeting (Oak Ridge and Lindau Committee)\\
@@ -88,15 +89,16 @@
 
   \textbf{Conference Presentations:}
   \begin{enumerate}
-  \item D.Ferguson, D.Shoemaker (2021 July), oral ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'', 14th Edoardo Amaldi Conference on Gravitational Waves, Virtual
-  \item D.Ferguson,  D.Shoemaker (2021 April),  oral ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'',  American Physical Society April Meeting, Virtual
-  \item D. Ferguson, K. Jani, P. Laguna, D. Shoemaker (2020 Sep), oral, ``Assessing the Readiness of Numerical Relativity for LISA'', 13th International LISA Symposium, Virtual
-  \item D. Ferguson, K. Jani, D. Shoemaker, (2020 Apr), oral, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', American Physical Society April Meeting, Virtual
+  \item D.Ferguson (2022 April), ``Predicting Match to Optimize Numerical Relativity Template Placement'', American Physical Society April Meeting, New York City NY
+  \item D.Ferguson, D.Shoemaker (2021 July), ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'', 14th Edoardo Amaldi Conference on Gravitational Waves, Virtual
+  \item D.Ferguson,  D.Shoemaker (2021 April), ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'',  American Physical Society April Meeting, Virtual
+  \item D. Ferguson, K. Jani, P. Laguna, D. Shoemaker (2020 Sep), ``Assessing the Readiness of Numerical Relativity for LISA'', 13th International LISA Symposium, Virtual
+  \item D. Ferguson, K. Jani, D. Shoemaker, (2020 Apr), ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', American Physical Society April Meeting, Virtual
   \item D. Ferguson, K. Jani, D. Shoemaker, (2020 Jan), poster and oral, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', 235th Meeting of the Americal Astronomical Society, Honolulu HI
-  \item D. Ferguson, (2019 June), oral, ``Using Machine Learning to Optimize Placement of Numerical Relativity Simulations'', Machine Learning in Science and Engineering Conference, Atlanta GA
+  \item D. Ferguson, (2019 June), ``Using Machine Learning to Optimize Placement of Numerical Relativity Simulations'', Machine Learning in Science and Engineering Conference, Atlanta GA
   \item D. Ferguson, K. Jani, D. Shoemaker, (2019 May), poster, ``Numerical Relativity Errors in LISA'', LISA Waveform Working Group Meeting, Golm Germany
-  \item D. Ferguson, et al., (2018 Apr), oral, ``Revealing the Final Black Hole from Signal at Maximum Amplitude'', American Physical Society April Meeting, Columbus OH
-  \item D. Ferguson, et al., (2017 Oct), oral, ``Apparent Horizon Dynamics of Binary Black Hole Systems'', Georgia Regional Astronomers Meeting, Athens GA
+  \item D. Ferguson, et al., (2018 Apr), ``Revealing the Final Black Hole from Signal at Maximum Amplitude'', American Physical Society April Meeting, Columbus OH
+  \item D. Ferguson, et al., (2017 Oct), ``Apparent Horizon Dynamics of Binary Black Hole Systems'', Georgia Regional Astronomers Meeting, Athens GA
   \item C. Powell, D. Ferguson, (2014 Apr), poster and oral, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena''. National Conference on Undergraduate Research, Lexington KY  
   \end{enumerate} 
 
@@ -110,13 +112,23 @@
     \setcounter{papers}{\value{enumi}}
   \end{enumerate}
   
+  \textbf{Collaboration Publications with Direct Involvement:}  
+  \begin{enumerate}
+  \setcounter{enumi}{\value{papers}}
+  \item \fullcite{LIGOScientific:2021sio}
+  \item \fullcite{LIGOScientific:2020tif}	
+  \setcounter{papers}{\value{enumi}}
+  \end{enumerate}
+  
   \textbf{Collaboration Publications:}
   \begin{enumerate}
   \setcounter{enumi}{\value{papers}}
+  \item \fullcite{LIGOScientific:2022lsr}
+  \item \fullcite{LIGOScientific:2022jpr}
+  \item \fullcite{LIGOScientific:2022myk}  
   \item \fullcite{LIGOScientific:2022cgf}
   \item \fullcite{LIGOScientific:2022pjk}
   \item \fullcite{LIGOScientific:2021quq}
-  \item \fullcite{LIGOScientific:2021sio}
   \item \fullcite{LIGOScientific:2021jlr}
   \item \fullcite{LIGOScientific:2021inr}
   \item \fullcite{LIGOScientific:2021hvc}
@@ -143,7 +155,6 @@
   \item \fullcite{Abbott:2020mev}
   \item \fullcite{LIGOScientific:2020lst}
   \item \fullcite{Abbott:2020gyp}
-  \item \fullcite{LIGOScientific:2020tif}
   \item \fullcite{LIGOScientific:2020ibl}  
   \item \fullcite{Abbott:2020mjq}
   \item \fullcite{Abbott:2020tfl}
@@ -163,6 +174,7 @@
   \vspace{8px}   
  
   \textbf{Leadership and Outreach:}\\
+  2022 - Talk at Lakeway Men's Breakfast Club\\
   2021 - Generated visualizations for LVC announcement of Black-Hole Neutron-Star mergers\\
   2020 - Generated visualizations for GW190521 announcement\\
   2019 - Atlanta Science Tavern Talk: Black holes wave back: observing the most violent events in the cosmos\\
@@ -174,8 +186,9 @@
   \vspace{8px}
 
   \textbf{Professional Service: }\\
-  PRD, PRL Referee\\
-  2017 - Served as scribe for NASA Astrophysics Theory Program Review Panel\\
+  Co-organizer of UT Austin Theory Group Seminar\\
+  Referee for Physical Review Letters, Physical Review D,  and General Relativity and Gravitation\\
+  Served as scribe for NASA Review Panel\\
   
 \end{flushleft}
 \end{document}
