Add lisa symposium

--- a/cv.tex
+++ b/cv.tex
@@ -89,6 +89,7 @@
 
   \textbf{Conference Presentations:}
   \begin{enumerate}
+  \item D. Ferguson (2022 July), ``Optimizing Numerical Relativity Placement using Neural Networks'', 14th International LISA Symposium, Prerecorded
   \item D.Ferguson (2022 April), ``Predicting Match to Optimize Numerical Relativity Template Placement'', American Physical Society April Meeting, New York City NY
   \item D.Ferguson, D.Shoemaker (2021 July), ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'', 14th Edoardo Amaldi Conference on Gravitational Waves, Virtual
   \item D.Ferguson,  D.Shoemaker (2021 April), ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'',  American Physical Society April Meeting, Virtual
