update format of talks

--- a/cv.tex
+++ b/cv.tex
@@ -89,18 +89,18 @@
 
   \textbf{Conference Presentations:}
   \begin{enumerate}
-  \item D. Ferguson (2022 July), ``Optimizing Numerical Relativity Placement using Neural Networks'', 14th International LISA Symposium, Prerecorded
-  \item D.Ferguson (2022 April), ``Predicting Match to Optimize Numerical Relativity Template Placement'', American Physical Society April Meeting, New York City NY
-  \item D.Ferguson, D.Shoemaker (2021 July), ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'', 14th Edoardo Amaldi Conference on Gravitational Waves, Virtual
-  \item D.Ferguson,  D.Shoemaker (2021 April), ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'',  American Physical Society April Meeting, Virtual
-  \item D. Ferguson, K. Jani, P. Laguna, D. Shoemaker (2020 Sep), ``Assessing the Readiness of Numerical Relativity for LISA'', 13th International LISA Symposium, Virtual
-  \item D. Ferguson, K. Jani, D. Shoemaker, (2020 Apr), ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', American Physical Society April Meeting, Virtual
-  \item D. Ferguson, K. Jani, D. Shoemaker, (2020 Jan), poster and oral, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', 235th Meeting of the Americal Astronomical Society, Honolulu HI
-  \item D. Ferguson, (2019 June), ``Using Machine Learning to Optimize Placement of Numerical Relativity Simulations'', Machine Learning in Science and Engineering Conference, Atlanta GA
-  \item D. Ferguson, K. Jani, D. Shoemaker, (2019 May), poster, ``Numerical Relativity Errors in LISA'', LISA Waveform Working Group Meeting, Golm Germany
-  \item D. Ferguson, et al., (2018 Apr), ``Revealing the Final Black Hole from Signal at Maximum Amplitude'', American Physical Society April Meeting, Columbus OH
-  \item D. Ferguson, et al., (2017 Oct), ``Apparent Horizon Dynamics of Binary Black Hole Systems'', Georgia Regional Astronomers Meeting, Athens GA
-  \item C. Powell, D. Ferguson, (2014 Apr), poster and oral, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena''. National Conference on Undergraduate Research, Lexington KY  
+  \item D. Ferguson, ``Optimizing Numerical Relativity Placement using Neural Networks'', 14th International LISA Symposium, Virtual, July 2022
+  \item D.Ferguson, ``Predicting Match to Optimize Numerical Relativity Template Placement'', American Physical Society April Meeting, New York City NY, April 2022
+  \item D.Ferguson, D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'', 14th Edoardo Amaldi Conference on Gravitational Waves, Virtual, July 2021
+  \item D.Ferguson,  D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'',  American Physical Society April Meeting, Virtual, April 2021
+  \item D. Ferguson, K. Jani, P. Laguna, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for LISA'', 13th International LISA Symposium, Virtual, September 2020
+  \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', American Physical Society April Meeting, Virtual, April 2020
+  \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', 235th Meeting of the Americal Astronomical Society, Honolulu HI, January 2020
+  \item D. Ferguson, ``Using Machine Learning to Optimize Placement of Numerical Relativity Simulations'', Machine Learning in Science and Engineering Conference, Atlanta GA, June 2019
+  \item D. Ferguson, K. Jani, D. Shoemaker, poster, ``Numerical Relativity Errors in LISA'', LISA Waveform Working Group Meeting, Golm Germany, May 2019
+  \item D. Ferguson, et al., ``Revealing the Final Black Hole from Signal at Maximum Amplitude'', American Physical Society April Meeting, Columbus OH, April 2018
+  \item D. Ferguson, et al., ``Apparent Horizon Dynamics of Binary Black Hole Systems'', Georgia Regional Astronomers Meeting, Athens GA, October 2017
+  \item C. Powell, D. Ferguson, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena''. National Conference on Undergraduate Research, Lexington KY, April 2014
   \end{enumerate} 
 
   \textbf{Short Author Publications:}
