--- a/cv.tex
+++ b/cv.tex
@@ -95,7 +95,7 @@
   \item D.Ferguson,  D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'',  American Physical Society April Meeting, Virtual, April 2021
   \item D. Ferguson, K. Jani, P. Laguna, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for LISA'', 13th International LISA Symposium, Virtual, September 2020
   \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', American Physical Society April Meeting, Virtual, April 2020
-  \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', 235th Meeting of the Americal Astronomical Society, Honolulu HI, January 2020
+  \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', 235th Meeting of the American Astronomical Society, Honolulu HI, January 2020
   \item D. Ferguson, ``Using Machine Learning to Optimize Placement of Numerical Relativity Simulations'', Machine Learning in Science and Engineering Conference, Atlanta GA, June 2019
   \item D. Ferguson, K. Jani, D. Shoemaker, poster, ``Numerical Relativity Errors in LISA'', LISA Waveform Working Group Meeting, Golm Germany, May 2019
   \item D. Ferguson, et al., ``Revealing the Final Black Hole from Signal at Maximum Amplitude'', American Physical Society April Meeting, Columbus OH, April 2018
